build/log/idf_py_stdout_output_15806
[1/10] Building C object esp-idf/recovery_control/CMakeFiles/__idf_recovery_control.dir/recovery_control.c.obj
FAILED: esp-idf/recovery_control/CMakeFiles/__idf_recovery_control.dir/recovery_control.c.obj 
/home/suchy/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2-365-ge60b0235ad\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/suchy/OBC/OBC_Recovery/build/config -I/home/suchy/OBC/OBC_Recovery/components/recovery_control -I/home/suchy/esp/esp-idf/components/newlib/platform_include -I/home/suchy/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/suchy/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/suchy/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/suchy/esp/esp-idf/components/freertos/esp_additions/include -I/home/suchy/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/suchy/esp/esp-idf/components/esp_hw_support/include -I/home/suchy/esp/esp-idf/components/esp_hw_support/include/soc -I/home/suchy/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/suchy/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/suchy/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/suchy/esp/esp-idf/components/heap/include -I/home/suchy/esp/esp-idf/components/log/include -I/home/suchy/esp/esp-idf/components/soc/include -I/home/suchy/esp/esp-idf/components/soc/esp32 -I/home/suchy/esp/esp-idf/components/soc/esp32/include -I/home/suchy/esp/esp-idf/components/hal/esp32/include -I/home/suchy/esp/esp-idf/components/hal/include -I/home/suchy/esp/esp-idf/components/hal/platform_port/include -I/home/suchy/esp/esp-idf/components/esp_rom/include -I/home/suchy/esp/esp-idf/components/esp_rom/include/esp32 -I/home/suchy/esp/esp-idf/components/esp_rom/esp32 -I/home/suchy/esp/esp-idf/components/esp_common/include -I/home/suchy/esp/esp-idf/components/esp_system/include -I/home/suchy/esp/esp-idf/components/esp_system/port/soc -I/home/suchy/esp/esp-idf/components/esp_system/port/include/private -I/home/suchy/esp/esp-idf/components/xtensa/include -I/home/suchy/esp/esp-idf/components/xtensa/esp32/include -I/home/suchy/esp/esp-idf/components/lwip/include -I/home/suchy/esp/esp-idf/components/lwip/include/apps -I/home/suchy/esp/esp-idf/components/lwip/include/apps/sntp -I/home/suchy/esp/esp-idf/components/lwip/lwip/src/include -I/home/suchy/esp/esp-idf/components/lwip/port/include -I/home/suchy/esp/esp-idf/components/lwip/port/freertos/include -I/home/suchy/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/suchy/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/suchy/esp/esp-idf/components/driver/include -I/home/suchy/esp/esp-idf/components/driver/deprecated -I/home/suchy/esp/esp-idf/components/driver/analog_comparator/include -I/home/suchy/esp/esp-idf/components/driver/dac/include -I/home/suchy/esp/esp-idf/components/driver/gpio/include -I/home/suchy/esp/esp-idf/components/driver/gptimer/include -I/home/suchy/esp/esp-idf/components/driver/i2c/include -I/home/suchy/esp/esp-idf/components/driver/i2s/include -I/home/suchy/esp/esp-idf/components/driver/ledc/include -I/home/suchy/esp/esp-idf/components/driver/mcpwm/include -I/home/suchy/esp/esp-idf/components/driver/parlio/include -I/home/suchy/esp/esp-idf/components/driver/pcnt/include -I/home/suchy/esp/esp-idf/components/driver/rmt/include -I/home/suchy/esp/esp-idf/components/driver/sdio_slave/include -I/home/suchy/esp/esp-idf/components/driver/sdmmc/include -I/home/suchy/esp/esp-idf/components/driver/sigma_delta/include -I/home/suchy/esp/esp-idf/components/driver/spi/include -I/home/suchy/esp/esp-idf/components/driver/temperature_sensor/include -I/home/suchy/esp/esp-idf/components/driver/touch_sensor/include -I/home/suchy/esp/esp-idf/components/driver/twai/include -I/home/suchy/esp/esp-idf/components/driver/uart/include -I/home/suchy/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/suchy/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/suchy/esp/esp-idf/components/esp_pm/include -I/home/suchy/esp/esp-idf/components/esp_ringbuf/include -I/home/suchy/OBC/OBC_Recovery/components/config -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/suchy/OBC/OBC_Recovery=. -fmacro-prefix-map=/home/suchy/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/recovery_control/CMakeFiles/__idf_recovery_control.dir/recovery_control.c.obj -MF esp-idf/recovery_control/CMakeFiles/__idf_recovery_control.dir/recovery_control.c.obj.d -o esp-idf/recovery_control/CMakeFiles/__idf_recovery_control.dir/recovery_control.c.obj -c /home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c: In function 'recovery_Init':
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c:127:2: error: unterminated argument list invoking macro "ESP_LOGI"
  127 | }
      |  ^
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c:27:5: error: 'ESP_LOGI' undeclared (first use in this function); did you mean 'ESP_LOG_INFO'?
   27 |     ESP_LOGI(TAG,"DUPA";
      |     ^~~~~~~~
      |     ESP_LOG_INFO
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c:27:5: note: each undeclared identifier is reported only once for each function it appears in
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c:27:13: error: expected ';' at end of input
   27 |     ESP_LOGI(TAG,"DUPA";
      |             ^
      |             ;
......
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c:27:5: error: expected declaration or statement at end of input
   27 |     ESP_LOGI(TAG,"DUPA";
      |     ^~~~~~~~
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c:19:19: warning: unused variable 'gpio_outputs' [-Wunused-variable]
   19 |     gpio_config_t gpio_outputs = {
      |                   ^~~~~~~~~~~~
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c:11:19: warning: unused variable 'gpio_inputs' [-Wunused-variable]
   11 |     gpio_config_t gpio_inputs = {
      |                   ^~~~~~~~~~~
/home/suchy/OBC/OBC_Recovery/components/recovery_control/recovery_control.c:128: error: control reaches end of non-void function [-Werror=return-type]
cc1: some warnings being treated as errors
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/suchy/OBC/OBC_Recovery/build/bootloader/esp-idf/esptool_py && /home/suchy/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/suchy/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/suchy/OBC/OBC_Recovery/build/bootloader/bootloader.bin
Bootloader binary size 0x6820 bytes. 0x7e0 bytes (7%) free.
ninja: build stopped: subcommand failed.
